syntax = "proto3";

package myresponder;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";


option go_package = "github.com/my-responder/pkg/rpb;rpb";

message VersionResponse {
  string version = 1;
}

message UpdateDescriptionRequest {
  string description = 1;
  int64 service = 2;
}

message UpdateDescriptionResponse {
  string description = 1;
}

message GetDescriptionRequest {
  int64 service = 1;
}

message GetDescriptionResponse {
  string description = 1;
}

message GetUptimeRequest {
  int64 service = 1;
}

message GetUptimeResponse {
  int64 uptime = 1;
}

message GetRequestsRequest {
  int64 service = 1;
}

message GetRequestsResponse {
  int64 requests = 1;
}

message GetModeRequest {
}

message GetModeResponse {
  int64 mode = 1;
}

message SetModeRequest {
  int64 mode = 2;
}

message SetModeResponse {
  int64 mode = 1;
}

message RestartRequest {
  int64 service = 1;
}

message RestartResponse {
}

// TODO: Define the MyResponder service and its methods. Feel free
// to change the name of MyResponder to better-suit your naming
// conventions.
service MyResponder {
  rpc GetVersion (google.protobuf.Empty) returns (VersionResponse) {
    
  }
  rpc UpdateDescription (UpdateDescriptionRequest) returns (UpdateDescriptionResponse){

  }

  rpc GetDescription (GetDescriptionRequest) returns (GetDescriptionResponse){

  }

  rpc GetUptime (GetUptimeRequest) returns (GetUptimeResponse){

  }

  rpc GetRequests (GetRequestsRequest) returns (GetRequestsResponse){

  }
  rpc GetMode (GetModeRequest) returns (GetModeResponse){

  }

  rpc SetMode (SetModeRequest) returns (SetModeResponse){

  }

  rpc Restart (RestartRequest) returns (RestartResponse){

  }
}
